syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";

import "common.proto";

package cbtumblebug;

service Image {
    rpc RegisterImageWithId (RegisterImageWithIdWrapper) returns (TbImageInfo) {}
    rpc RegisterImageWithInfo (RegisterImageWithInfoWrapper) returns (TbImageInfo) {}
    rpc DelAllImages (DelAllResourcesWrapper) returns (google.protobuf.Empty) {}
    rpc DelImage (DelResourceWrapper) returns (google.protobuf.Empty) {}
    rpc GetImage (GetResourceWrapper) returns (TbImageInfo) {}
    rpc ListImage (NsId) returns (TbImageInfoList) {}
    rpc ListImageId (NsId) returns (ResourceIdList) {}
}

message TbImageReq {
    string name = 1 [json_name="name", (gogoproto.jsontag) = "name", (gogoproto.moretags) = "yaml:\"name\""];
    string connection_name = 2 [json_name="connectionName", (gogoproto.jsontag) = "connectionName", (gogoproto.moretags) = "yaml:\"connectionName\""];
    string csp_image_id = 3 [json_name="cspImageId", (gogoproto.jsontag) = "cspImageId", (gogoproto.moretags) = "yaml:\"cspImageId\""];
    string csp_image_name = 4 [json_name="cspImageName", (gogoproto.jsontag) = "cspImageName", (gogoproto.moretags) = "yaml:\"cspImageName\""];
    string description = 5 [json_name="description", (gogoproto.jsontag) = "description", (gogoproto.moretags) = "yaml:\"description\""];
}

message RegisterImageWithIdWrapper {
    string ns_id = 1 [json_name="nsId", (gogoproto.jsontag) = "nsId", (gogoproto.moretags) = "yaml:\"nsId\""];
    TbImageReq tb_image_req = 2 [json_name="tbImageReq", (gogoproto.jsontag) = "tbImageReq", (gogoproto.moretags) = "yaml:\"tbImageReq\""];
}

message TbImageInfo {
    string name = 1 [json_name="name", (gogoproto.jsontag) = "name", (gogoproto.moretags) = "yaml:\"name\""];
    string connection_name = 2 [json_name="connectionName", (gogoproto.jsontag) = "connectionName", (gogoproto.moretags) = "yaml:\"connectionName\""];
    string csp_image_id = 3 [json_name="cspImageId", (gogoproto.jsontag) = "cspImageId", (gogoproto.moretags) = "yaml:\"cspImageId\""];
    string csp_image_name = 4 [json_name="cspImageName", (gogoproto.jsontag) = "cspImageName", (gogoproto.moretags) = "yaml:\"cspImageName\""];
    string description = 5 [json_name="description", (gogoproto.jsontag) = "description", (gogoproto.moretags) = "yaml:\"description\""];
    string creation_date = 6 [json_name="creationDate", (gogoproto.jsontag) = "creationDate", (gogoproto.moretags) = "yaml:\"creationDate\""];
    string guest_os = 7 [json_name="guestOS", (gogoproto.jsontag) = "guestOS", (gogoproto.moretags) = "yaml:\"guestOS\""];
    string status = 8 [json_name="status", (gogoproto.jsontag) = "status", (gogoproto.moretags) = "yaml:\"status\""];
    repeated KeyValue key_value_list = 9 [json_name="keyValueList", (gogoproto.jsontag) = "keyValueList", (gogoproto.moretags) = "yaml:\"keyValueList\""];
    string id = 10 [json_name="id", (gogoproto.jsontag) = "id", (gogoproto.moretags) = "yaml:\"id\""];
}

message RegisterImageWithInfoWrapper {
    string ns_id = 1 [json_name="nsId", (gogoproto.jsontag) = "nsId", (gogoproto.moretags) = "yaml:\"nsId\""];
    TbImageInfo tb_image_info = 2 [json_name="tbImageInfo", (gogoproto.jsontag) = "tbImageInfo", (gogoproto.moretags) = "yaml:\"tbImageInfo\""];
}

message TbImageInfoList {
    repeated TbImageInfo tb_image_infos = 1 [json_name="image", (gogoproto.jsontag) = "image", (gogoproto.moretags) = "yaml:\"image\""];
}