syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";

import "common.proto";

package cbtumblebug;

service Spec {
    rpc RegisterSpecWithCspSpecName (RegisterSpecWithCspSpecNameWrapper) returns (TbSpecInfo) {}
    rpc RegisterSpecWithInfo (RegisterSpecWithInfoWrapper) returns (TbSpecInfo) {}
    rpc DelAllSpecs (DelAllResourcesWrapper) returns (google.protobuf.Empty) {}
    rpc DelSpec (DelResourceWrapper) returns (google.protobuf.Empty) {}
    rpc GetSpec (GetResourceWrapper) returns (TbSpecInfo) {}
    rpc ListSpec (NsId) returns (TbSpecInfoList) {}
    rpc ListSpecId (NsId) returns (ResourceIdList) {}
}

message TbSpecReq {
    string name = 2 [json_name="name", (gogoproto.jsontag) = "name", (gogoproto.moretags) = "yaml:\"name\""];
    string connection_name = 3 [json_name="connectionName", (gogoproto.jsontag) = "connectionName", (gogoproto.moretags) = "yaml:\"connectionName\""];
    string csp_spec_name = 4 [json_name="cspSpecName", (gogoproto.jsontag) = "cspSpecName", (gogoproto.moretags) = "yaml:\"cspSpecName\""];
    string os_type = 5 [json_name="os_type", (gogoproto.jsontag) = "os_type", (gogoproto.moretags) = "yaml:\"os_type\""];
    string num_vcpu = 6 [json_name="num_vCPU", (gogoproto.jsontag) = "num_vCPU", (gogoproto.moretags) = "yaml:\"num_vCPU\""];
    string num_core = 7 [json_name="num_core", (gogoproto.jsontag) = "num_core", (gogoproto.moretags) = "yaml:\"num_core\""];
    string mem_gib = 8 [json_name="mem_GiB", (gogoproto.jsontag) = "mem_GiB", (gogoproto.moretags) = "yaml:\"mem_GiB\""];
    string mem_mib = 9 [json_name="mem_MiB", (gogoproto.jsontag) = "mem_MiB", (gogoproto.moretags) = "yaml:\"mem_MiB\""];
    string storage_gib = 10 [json_name="storage_GiB", (gogoproto.jsontag) = "storage_GiB", (gogoproto.moretags) = "yaml:\"storage_GiB\""];
    string description = 11 [json_name="description", (gogoproto.jsontag) = "description", (gogoproto.moretags) = "yaml:\"description\""];
}

message RegisterSpecWithCspSpecNameWrapper {
    string ns_id = 1 [json_name="nsId", (gogoproto.jsontag) = "nsId", (gogoproto.moretags) = "yaml:\"nsId\""];
    TbSpecReq tb_spec_req = 2 [json_name="tbSpecReq", (gogoproto.jsontag) = "tbSpecReq", (gogoproto.moretags) = "yaml:\"tbSpecReq\""];
}

message TbSpecInfo {
    string id = 1 [json_name="id", (gogoproto.jsontag) = "id", (gogoproto.moretags) = "yaml:\"id\""];
    
    string name = 2 [json_name="name", (gogoproto.jsontag) = "name", (gogoproto.moretags) = "yaml:\"name\""];
    string connection_name = 3 [json_name="connectionName", (gogoproto.jsontag) = "connectionName", (gogoproto.moretags) = "yaml:\"connectionName\""];
    string csp_spec_name = 4 [json_name="cspSpecName", (gogoproto.jsontag) = "cspSpecName", (gogoproto.moretags) = "yaml:\"cspSpecName\""];
    string os_type = 5 [json_name="os_type", (gogoproto.jsontag) = "os_type", (gogoproto.moretags) = "yaml:\"os_type\""];
    string num_vcpu = 6 [json_name="num_vCPU", (gogoproto.jsontag) = "num_vCPU", (gogoproto.moretags) = "yaml:\"num_vCPU\""];
    string num_core = 7 [json_name="num_core", (gogoproto.jsontag) = "num_core", (gogoproto.moretags) = "yaml:\"num_core\""];
    string mem_gib = 8 [json_name="mem_GiB", (gogoproto.jsontag) = "mem_GiB", (gogoproto.moretags) = "yaml:\"mem_GiB\""];
    string mem_mib = 9 [json_name="mem_MiB", (gogoproto.jsontag) = "mem_MiB", (gogoproto.moretags) = "yaml:\"mem_MiB\""];
    string storage_gib = 10 [json_name="storage_GiB", (gogoproto.jsontag) = "storage_GiB", (gogoproto.moretags) = "yaml:\"storage_GiB\""];
    string description = 11 [json_name="description", (gogoproto.jsontag) = "description", (gogoproto.moretags) = "yaml:\"description\""];
    
    string cost_per_hour = 12 [json_name="cost_per_hour", (gogoproto.jsontag) = "cost_per_hour", (gogoproto.moretags) = "yaml:\"cost_per_hour\""];
    string num_storage = 13 [json_name="num_storage", (gogoproto.jsontag) = "num_storage", (gogoproto.moretags) = "yaml:\"num_storage\""];
    string max_num_storage = 14 [json_name="max_num_storage", (gogoproto.jsontag) = "max_num_storage", (gogoproto.moretags) = "yaml:\"max_num_storage\""];
    string max_total_storage_tib = 15 [json_name="max_total_storage_TiB", (gogoproto.jsontag) = "max_total_storage_TiB", (gogoproto.moretags) = "yaml:\"max_total_storage_TiB\""];
    string net_bw_gbps = 16 [json_name="net_bw_Gbps", (gogoproto.jsontag) = "net_bw_Gbps", (gogoproto.moretags) = "yaml:\"net_bw_Gbps\""];
    string ebs_bw_Mbps = 17 [json_name="ebs_bw_Mbps", (gogoproto.jsontag) = "ebs_bw_Mbps", (gogoproto.moretags) = "yaml:\"ebs_bw_Mbps\""];
    string gpu_model = 18 [json_name="gpu_model", (gogoproto.jsontag) = "gpu_model", (gogoproto.moretags) = "yaml:\"gpu_model\""];
    string num_gpu = 19 [json_name="num_gpu", (gogoproto.jsontag) = "num_gpu", (gogoproto.moretags) = "yaml:\"num_gpu\""];
    string gpumem_gib = 20 [json_name="gpumem_GiB", (gogoproto.jsontag) = "gpumem_GiB", (gogoproto.moretags) = "yaml:\"gpumem_GiB\""];
    string gpu_p2p = 21 [json_name="gpu_p2p", (gogoproto.jsontag) = "gpu_p2p", (gogoproto.moretags) = "yaml:\"gpu_p2p\""];
}

message RegisterSpecWithInfoWrapper {
    string ns_id = 1 [json_name="nsId", (gogoproto.jsontag) = "nsId", (gogoproto.moretags) = "yaml:\"nsId\""];
    TbSpecInfo tb_spec_info = 2 [json_name="tbSpecInfo", (gogoproto.jsontag) = "tbSpecInfo", (gogoproto.moretags) = "yaml:\"tbSpecInfo\""];
}

message TbSpecInfoList {
    repeated TbSpecInfo tb_spec_infos = 1 [json_name="spec", (gogoproto.jsontag) = "spec", (gogoproto.moretags) = "yaml:\"spec\""];
}